# decompressor

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker-publish.yml
src/: config.rs  main.rs  proxy.rs
src/proxy/: app.rs  encoding.rs  error.rs  headers.rs  mod.rs  state.rs  upstream.rs
tests/: cpa_br_request_body.rs  cpa_gzip_request_body.rs  proxy_forwarding.rs
