[package]
name = "decompressor"
version = "0.1.0"
edition = "2024"

[dependencies]
async-compression = { version = "0.4", features = ["tokio", "gzip", "brotli"] }
axum = "0.8"
dotenvy = "0.15"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "time"] }
tokio-util = { version = "0.7", features = ["io"] }

[dev-dependencies]
base64 = "0.22"
brotli = "8"
libdeflater = "1.25"
serde_json = "1"
